アホになり切れ追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -131,6 +131,7 @@
         <kramman-player src="http://pzv.jp/p.html?kramman/5/5/32223i3f2fb99i"></kramman-player>
         <kramma-player src="http://pzv.jp/p.html?kramma/c/5/5/9ock3ba9i"></kramma-player>
         <cojun-player src="http://pzv.jp/p.html?cojun/c/4/4/pd0hsoh3p3h"></cojun-player>
+        <aho-player src="http://pzv.jp/p.html?aho/6/6/4i264n6j3n223i4"></aho-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
