ウソタタミ追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -132,6 +132,7 @@
         <kramma-player src="http://pzv.jp/p.html?kramma/c/5/5/9ock3ba9i"></kramma-player>
         <cojun-player src="http://pzv.jp/p.html?cojun/c/4/4/pd0hsoh3p3h"></cojun-player>
         <aho-player src="http://pzv.jp/p.html?aho/6/6/4i264n6j3n223i4"></aho-player>
+        <usotatami-player src="http://pzv.jp/p.html?usotatami/5/5/1a13a2d1a1a3a121b3b2"></usotatami-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
