イチマガ・磁石イチマガ・一回曲がって交差もするの 追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -134,6 +134,9 @@
         <aho-player src="http://pzv.jp/p.html?aho/6/6/4i264n6j3n223i4"></aho-player>
         <usotatami-player src="http://pzv.jp/p.html?usotatami/5/5/1a13a2d1a1a3a121b3b2"></usotatami-player>
         <fillmat-player src="http://pzv.jp/p.html?fillmat/5/5/3b3h1h1b4"></fillmat-player>
+        <ichimaga-player src="http://pzv.jp/p.html?ichimaga/5/5/gdiedgdbic"></ichimaga-player>
+        <ichimagam-player src="http://pzv.jp/p.html?ichimagam/5/5/7cgegbegbgcc"></ichimagam-player>
+        <ichimagax-player src="http://pzv.jp/p.html?ichimagax/5/5/g8bgedgbeg8b"></ichimagax-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
