たわむれんが追加（テスト通らない……）

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -137,6 +137,7 @@
         <ichimaga-player src="http://pzv.jp/p.html?ichimaga/5/5/gdiedgdbic"></ichimaga-player>
         <ichimagam-player src="http://pzv.jp/p.html?ichimagam/5/5/7cgegbegbgcc"></ichimagam-player>
         <ichimagax-player src="http://pzv.jp/p.html?ichimagax/5/5/g8bgedgbeg8b"></ichimagax-player>
+        <tawa-player src="http://pzv.jp/p.html?tawa/5/5/0/a2b2b3g5b2c2"></tawa-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
