交差は直角に限る 追加

--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -138,6 +138,7 @@
         <ichimagam-player src="http://pzv.jp/p.html?ichimagam/5/5/7cgegbegbgcc"></ichimagam-player>
         <ichimagax-player src="http://pzv.jp/p.html?ichimagax/5/5/g8bgedgbeg8b"></ichimagax-player>
         <tawa-player src="http://pzv.jp/p.html?tawa/5/5/0/a2b2b3g5b2c2"></tawa-player>
+        <kouchoku-player src="http://pzv.jp/p.html?kouchoku/4/4/a2b1.2a0bc0b2.0.c0"></kouchoku-player>
 
     </div>
     <script type="module" src="./dev/main.ts">
