--- a/packages/demo/index.html
+++ b/packages/demo/index.html
@@ -103,6 +103,42 @@
         <wagiri-player src="http://pzv.jp/p.html?wagiri/4/4/lebcacja1d2b1d1a"></wagiri-player>
         <wblink-player src="http://pzv.jp/p.html?wblink/5/5/ci6a2ln1i"></wblink-player>
         <roma-player src="http://pzv.jp/p.html?roma/4/4/augddgb2a12d53a3b"></roma-player>
+        <loute-player src="http://pzv.jp/p.html?loute/5/5/5i3h1h1i1h2h4i5"></loute-player>
+        <hanare-player src="http://pzv.jp/p.html?hanare/4/4/jegf6gu3"></hanare-player>
+        <nondango-player src="http://pzv.jp/p.html?nondango/6/6/5jlp72e15tpq2i3ikht0"></nondango-player>
+        <cbblock-player src="http://pzv.jp/p.html?cbblock/4/4/ah0oa"></cbblock-player>
+        <amibo-player src="http://pzv.jp/p.html?amibo/5/5/2c4a.c3f.3f"></amibo-player>
+        <nanro-player src="http://pzv.jp/p.html?nanro/4/4/6r0s1oi13n1h"></nanro-player>
+        <rectslider-player src="http://pzv.jp/p.html?rectslider/6/6/2h2.4.t.j.g1g3g3i"></rectslider-player>
+        <sato-player src="http://pzv.jp/p.html?sato/5/5/26c8ueef3.l2i2m2j"></sato-player>
+        <heyabon-player src="http://pzv.jp/p.html?heyabon/5/5/co360rr0g1h0g.j121g3h1h.g.g"></heyabon-player>
+        <bonsan-player src="http://pzv.jp/p.html?bonsan/c/5/5/i.h.i2i.i3h2i"></bonsan-player>
+        <bosanowa-player src="http://pzv.jp/p.html?bonsan/6/5/jo9037g2n2n3g4j3i"></bosanowa-player>
+        <lookair-player src="http://pzv.jp/p.html?lookair/6/6/3e3b3g1a2e0a2c1d"></lookair-player>
+        <kakuru-player src="http://pzv.jp/p.html?kakuru/5/5/3.a+4+mD.S.bm+g+A.3"></kakuru-player>
+        <triplace-player src="http://pzv.jp/p.html?triplace/5/5/%2m_m%1m_.0.1....11"></triplace-player>
+        <yajitatami-player src="http://pzv.jp/p.html?yajitatami/5/5/b3233a2222p1233"></yajitatami-player>
+        <loopsp-player src="http://pzv.jp/p.html?loopsp/5/5/sgnmn1n1n2njnls"></loopsp-player>
+        <pipelink-player src="http://pzv.jp/p.html?pipelink/5/5/mamejan"></pipelink-player>
+        <pipelinkr-player src="http://pzv.jp/p.html?pipelinkr/5/5/ma0j2j0fm"></pipelinkr-player>
+        <mejilink-player src="http://pzv.jp/p.html?mejilink/4/4/g9rm4"></mejilink-player>
+        <kusabi-player src="http://pzv.jp/p.html?kusabi/5/5/311e2c12c1f3"></kusabi-player>
+        <kurochute-player src="http://pzv.jp/p.html?kurochute/5/5/132k1i1i2k332"></kurochute-player>
+        <renban-player src="http://pzv.jp/p.html?renban/4/4/vmok3g1p5g2h"></renban-player>
+        <paintarea-player src="http://pzv.jp/p.html?paintarea/5/5/pmvmfuejf4k1f"></paintarea-player>
+        <kazunori-player src="http://pzv.jp/p.html?kazunori/4/4/94g1s0g4k2p2k"></kazunori-player>
+        <shwolf-player src="http://pzv.jp/p.html?shwolf/5/5/0282bocb6ajf9"></shwolf-player>
+        <kramman-player src="http://pzv.jp/p.html?kramman/5/5/32223i3f2fb99i"></kramman-player>
+        <kramma-player src="http://pzv.jp/p.html?kramma/c/5/5/9ock3ba9i"></kramma-player>
+        <cojun-player src="http://pzv.jp/p.html?cojun/c/4/4/pd0hsoh3p3h"></cojun-player>
+        <aho-player src="http://pzv.jp/p.html?aho/6/6/4i264n6j3n223i4"></aho-player>
+        <usotatami-player src="http://pzv.jp/p.html?usotatami/5/5/1a13a2d1a1a3a121b3b2"></usotatami-player>
+        <fillmat-player src="http://pzv.jp/p.html?fillmat/5/5/3b3h1h1b4"></fillmat-player>
+        <ichimaga-player src="http://pzv.jp/p.html?ichimaga/5/5/gdiedgdbic"></ichimaga-player>
+        <ichimagam-player src="http://pzv.jp/p.html?ichimagam/5/5/7cgegbegbgcc"></ichimagam-player>
+        <ichimagax-player src="http://pzv.jp/p.html?ichimagax/5/5/g8bgedgbeg8b"></ichimagax-player>
+        <tawa-player src="http://pzv.jp/p.html?tawa/5/5/0/a2b2b3g5b2c2"></tawa-player>
+        <kouchoku-player src="http://pzv.jp/p.html?kouchoku/4/4/a2b1.2a0bc0b2.0.c0"></kouchoku-player>
 
 
     </div>
